second commit added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Conceptual Page</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/family.jpg" type="image/x-icon">
 </head>
 <body>
-    <h1>Hello World !!!</h1>
+    <div class="hero">
+        <h1>The Cow</h1>
+    </div>
+    <div class="article">
+        <h2>An Essay About Cow</h2>
+        <p>Cow is a four-footed animal . Cow eats mainly grass . <span class="milk">Cow gives us milk</span> .
+            I have a cow . Her name is lorem . Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Delectus, facere similique. Quae iusto vitae nihil, 
+            facilis assumenda eveniet fugit alias in minus. Eligendi iste, eius,
+            tempora deleniti illum neque corporis et vero reiciendis necessitatibus
+            laboriosam in commodi, exercitationem accusantium recusandae libero repellendus voluptatum 
+            voluptas quibusdam consectetur quisquam incidunt. Et, repudiandae.</p>
+    </div>
+    
 </body>
 </html>
 
