--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
     </div>
     <div id="cow-type">
         <h2>Types of Cow</h2>
-        <div>
-            <img height="300px" width="300px" src="https://images.unsplash.com/photo-1535435734705-4f0f32e27c83?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+        <div class="cow-image">
+            <div >
+            <img  src="https://images.unsplash.com/photo-1535435734705-4f0f32e27c83?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
             alt="">
         </div>
         <div>
-            <img height="300px" width="300px" src="https://images.unsplash.com/photo-1503478571935-fc17ce31da99?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" 
+            <img src="https://images.unsplash.com/photo-1503478571935-fc17ce31da99?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" 
             alt="">
         </div>
         <div>
-            <img height="300px" width="300px" src="https://images.unsplash.com/photo-1533582842871-1d79c0399ced?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" 
+            <img  src="https://images.unsplash.com/photo-1533582842871-1d79c0399ced?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" 
             alt="">
         </div>
         <div>
-            <img height="300px" width="300px" src="https://images.unsplash.com/photo-1505218826806-f8c3daade016?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Njh8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" 
+            <img  src="https://images.unsplash.com/photo-1505218826806-f8c3daade016?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Njh8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" 
             alt="">
         </div>
+
+    </div>
     </div>
 </body>
 </html>
